--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,5 @@ spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql: true
 jwt.token.key = kdjssmkskafkhpsghpdsophgpwjgsmxkv
+spring.main.allow-bean-definition-overriding=true
 server.error.include-message = always
